--- a/nocturnal-discord.css
+++ b/nocturnal-discord.css
@@ -349,3 +349,7 @@ div.message-group,
 .header-2o-2hj {
   box-shadow: 0 0px 0 rgba(56, 61, 68, 0.7), 0 0px 0 rgba(0, 0, 0, 0.06);
 }
+
+.searchBar-6Kv8R2 {
+  background: #212733 !important;
+}
