--- a/nocturnal-discord.css
+++ b/nocturnal-discord.css
@@ -427,3 +427,7 @@ stickyHeader-1pqx0j header-39GIC8 row-1Lmx44 stickyHeader-r2k9DK,
 .container-1UB9sr {
   background: none;
 }
+
+.theme-dark .wrapper-2lTRaf {
+  background: none;
+}
