--- a/nocturnal-discord.css
+++ b/nocturnal-discord.css
@@ -428,6 +428,10 @@ stickyHeader-1pqx0j header-39GIC8 row-1Lmx44 stickyHeader-r2k9DK,
   background: none;
 }
 
-.theme-dark .wrapper-2lTRaf {
+.wrapper-2lTRaf {
   background: none;
+}
+
+.contextMenu-HLZMGh .theme-dark {
+  background-color: #212733 !important;
 }
