--- a/nocturnal-discord.css
+++ b/nocturnal-discord.css
@@ -452,3 +452,9 @@ div.message-group,
 .autocomplete-1vrmpx, .autocomplete-i9yVHs {
   background-color: #212733 !important
 }
+
+/* user info popout */
+.activityUserPopout-2yItg2,
+ .activity-11LB_k, .body-3iLsc4, .footer-1fjuF6, .headerPlaying-j0WQBV {
+  background-color: #212733 !important
+}
