--- a/nocturnal-discord.css
+++ b/nocturnal-discord.css
@@ -486,3 +486,7 @@ div.message-group,
 .theme-dark .button-OhfaWu.selected-wSa2KV, .theme-light .button-OhfaWu.selected-wSa2KV {
   background-color: #a88085;
 }
+
+.item-2hkk8m, .tabBar-1E2ExX .primary-3j8BhM {
+  background-color: #a88085 !important;
+}
