--- a/nocturnal-discord.css
+++ b/nocturnal-discord.css
@@ -493,3 +493,7 @@ div.message-group,
 .item-2hkk8m, .tabBar-1E2ExX .primary-3j8BhM {
   background-color: #a88085 !important;
 }
+
+.container-3baos1 {
+  background: none;
+}
