--- a/nocturnal-discord.css
+++ b/nocturnal-discord.css
@@ -497,3 +497,7 @@ div.message-group,
 .container-3baos1 {
   background-color: #212733 !important
 }
+
+.panel-24C3ux {
+  background-color: #212733 !important
+}
